# cerebus

./: .gitignore  README.md  test_navigation_integration.py
CameraWebServer/: CameraWebServer.ino  app_httpd.cpp
agent/: .gitignore  README.md  agent.py  env_template.txt  pyproject.toml  requirements.txt  scripts.py  test_agent.py
agent/agent/: __init__.py  agent.py  main.py  scripts.py
cerebus-web/: README.md  constants.ts  package.json  pnpm-lock.yaml
cerebus-web/convex/: audio.ts  audioMutations.ts  http.ts  schema.ts
cerebus-web/convex/_generated/: api.d.ts
cerebus-web/src/: App.css  App.tsx  GPS_SETUP.md  INTEGRATION_SUMMARY.md  SSETestComponent.tsx  WebRTCIntegration.tsx  main.tsx
cerebus-web/src/components/: GPSMapsDemo.tsx
cerebus-web/src/hooks/: useGeolocation.ts  useMaps.ts
gps-visual/: .gitignore  README.md  api_tester.html  langchain_example.py  requirements.txt
gps-visual/server/: package-lock.json  package.json  server.js
static/: adk-audio-test.html
video-stream-parse/: .gitignore  esp32_ai_client.py  esp32_camera_client.py  esp32_stream_macos.py  esp32_stream_parser.py  requirements.txt  test_yolo.py
video-stream-parse/object-localization/: README_Simple_Navigation.md  demo_simple_navigation.py  minimal_navigation.py  navigation_requirements.txt  requirements.txt  simple_navigation.py  simple_navigation_api.py  test_simple_navigation.py
wake-word/: detect_from_microphone.py  detect_from_server.py  hey_cerebus.onnx  main_server.py  requirements_server.txt  server.py
wake-word/static/: adk-audio-test.html  adk-test.html
(+8 files in other folders)
